<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">nobel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login2">Log In</string>
    <string name="email_code">Email/Code</string>
    <string name="enter_your_email_code">Enter Your Email / Code</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="reset_password">reset password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reEnter_your_password">ReEnter Your Password</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_user_name">Enter Your User Name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_subject">Enter Your Subject</string>
    <string name="signup">Sign Up</string>
    <string name="create_n_account">Create \nAccount</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="teacher_sign_up">Teacher Sign Up</string>
    <string name="subject">Subject</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="assistant">Assistant</string>
    <string name="parent">Parent</string>
    <string name="signupSuccessfully">Sign Up Successfully</string>
    <string name="signupCancel">Sign Up Cancelled</string>
    <string name="signupExists">User is already exist,Try to Login</string>
    <string name="passwordNotMatch">password doesn\'t match</string>
    <string name="phoneNotValid">Phone number isn\'t valid</string>
    <string name="network_lost_title">check your network then try again</string>
    <string name="fillAllFields">You must fill all data</string>
    <string name="signinSuccessfully">Login Successfully</string>
    <string name="signinNotExists">User doesn\'t exist</string>
    <string name="signinWrongPassword">Wrong Password</string>

    <string name="signinUserType">You Must Choose Your Role</string>


    <string name="notTeacher">You aren\'t a teacher</string>

    <string name="emailNotValid">Email isn\'t valid</string>

    <string name="passwordLength">Password should be at least 6 and less than 20 characters</string>
    <string name="signInCancel">Sign In Cancelled</string>
    <string name="assistants">Assistants</string>
    <string name="students">Students</string>
    <string name="groups">Groups</string>
    <string name="levels">Levels</string>
    <string name="lessons">Lessons</string>
    <string name="home">Home</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_assistant_phone_number">Enter Assistant Phone Number</string>
    <string name="add_assistant">Add Assistant</string>
    <string name="no_assistants_yet">No Assistants Yet</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="assistant_data">Assistant Data</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="enter_assistant_password">Enter Assistant Password</string>
    <string name="enter_assistant_name">Enter Assistant name</string>
    <string name="enter_assistant_email">Enter Assistant Email</string>
    <string name="semester_prompt">Select Semester</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_group">Add Group</string>
    <string name="no_groups_yet">No Groups Yet</string>
    <string name="ok">OK</string>
    <string name="choose_grade_level">Choose Grade Level</string>
    <string name="choose_group">Choose Group</string>
    <string name="choose_month">Choose Month</string>
    <string name="no_lessons_yet">No Lessons Yet</string>
    <string name="you_should_choose_grade_level">You should choose Grade Level First</string>

    <string name="you_should_choose_time">You should choose Grade Level and Group and time</string>

    <string name="you_should_choose_grade_level_and_group">You should choose Grade Level and Group</string>

    <string name="add_lesson">Add Lesson</string>

    <string name="no_grades_yet">No Grade Levels Yet</string>

    <string name="no_months_yet">No Months Yet</string>
    <string name="you_should_choose_semester_level">You should choose group</string>

    <string name="you_should_choose_semester">You should choose semester</string>

    <string name="choose_date">Choose Date </string>
    <string name="choose_semester">Choose Semester</string>

    <string name="should_choose_semester"> You Should Choose Semester</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="enter_student_email">Enter Student Email</string>
    <string name="enter_student_phone">Enter Student Phone</string>
    <string name="enter_student_password">Enter Student Password</string>
    <string name="enter_parent_email">Enter Parent Email</string>
    <string name="enter_parent_phone">Enter Parent Phone</string>
    <string name="add_student">Add Student</string>
    <string name="attendance">Attendance</string>
    <string name="choose_lesson">Choose Lesson</string>

    <string name="you_should_choose_month">You should choose Month First</string>
    <string name="no_students_yet">No Students Yet</string>
    <string name="search_by_student_name">Search By Student Name</string>
    <string name="exams">Exams</string>
    <string name="details">Details</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="permitted">permitted</string>
    <string name="present">present</string>
    <string name="absent">absent</string>
    <string name="late">late</string>
    <string name="payment">Payment</string>
    <string name="attendance_not_taken_yet">Attendance Not Taken Yet</string>
    <string name="icon">Icon</string>
    <string name="record_payment">Record Payment</string>

    <string name="payment_done">Payment is Done</string>

    <string name="payment_not_done">Payment is not made</string>
    <string name="parent_email">Parent Email</string>
    <string name="parent_phone">Parent Phone</string>
    <string name="parent_password">Parent Password</string>
    <string name="student_data">Edit Student Data</string>
    <string name="grade_level">Grade Level</string>
    <string name="group">Group</string>
    <string name="enter_parent_password">Enter Parent Password</string>
    <string name="todo">TODO</string>
    <string name="deleted_successfully"> Deleted successfully</string>
    <string name="updated_successfully"> Updated successfully</string>

    <string name="updated_successfully_and_move_to_new_group"> Updated successfully and moved to new group</string>
    <string name="no_months_paid_yet">No Months Paid Yet</string>
    <string name="are_you_sure_you_want_to_delete_this">Are You Sure You Want To delete this?</string>
    <string name="this_student_didn_t_attend_any_lesson_yet">this student didn\'t attend any lesson yet</string>
    <string name="welcome">Welcome</string>
    <string name="no_exams_added_to_this_group">No Exams Added To This Group</string>
    <string name="add_exam">Add Exam</string>
    <string name="enter_exam_name">Enter Exam Name</string>
    <string name="record_degrees">Record Degrees</string>
    <string name="you_should_enter_exam_name">You should enter Exam Name</string>
    <string name="you_should_choose_exam">You should choose exam First</string>

    <string name="choose_exam">Choose Exam</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="record_exam_degrees">Record Exam Degrees</string>

    <string name="no_degree">Degree Not Recorded</string>
    <string name="enter_exam_degree">Enter Exam Degree</string>
    <string name="no_exams_yet">No Exams Yet</string>
    <string name="added_successfully">Add Successfully</string>
    <string name="no_parent_added_to_this_student">No Parent Added To This Student</string>
    <string name="no_thing_change">No thing Change</string>
    <string name="the_parent">parent</string>
    <string name="choose_student">Choose Student</string>
    <string name="no_students_exist_in_another_semester">No students Exist in another semester</string>
    <string name="you_must_chhose_student_and_grade_and_group">You must choose student and determine new grade level and group </string>

    <string name="The_email_already_exists">The email already exists </string>
    <string name="existing_student">Existing Student</string>
    <string name="new_student">New Student</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="grades">Grades</string>
    <string name="profile">Profile</string>

    <string name="signinFailed">Sign In Failed</string>
    <string name="change">Change</string>
    <string name="current_password_is_the_same_as_new">Enter new password</string>
    <string name="incorrect_current_password">Current Password is incorrect</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="reenter_new_password">ReEnter New Password</string>

    <string name="are_you_sure_you_want_to_logout">Do You Want To Logout?</string>
    <string name="the_student">student</string>
    <string name="this_student_didn_t_take_any_exams_yet">This Student Didn\'t take any exams yet</string>
    <string-array name="grade_levels">
        <item>First preparatory Grade</item>
        <item>Second preparatory Grade</item>
        <item>Third preparatory Grade</item>
        <item>First Secondary Grade</item>
        <item>Second Secondary Grade</item>
        <item>Third Secondary Grade</item>
    </string-array>

</resources>