<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/teacherHomeFragment"
        android:title="@string/home"
        android:icon="@drawable/home_icon"
        />
    <item
        android:id="@+id/attendanceFragment"
        android:title="@string/attendance"
        android:icon="@drawable/attendance_icon"
        />
    <item
        android:id="@+id/paymentFragment"
        android:title="@string/payment"
        android:icon="@drawable/payment_icon2"
        />
    <item
        android:id="@+id/allExamsFragment"
        android:title="@string/exams"
        android:icon="@drawable/exam_icon"
        />
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/parent"
        />
</menu>