<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff0fc"
    tools:context=".authentication.LoginFragment">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:contentDescription="TODO"
                    android:scaleType="fitXY"
                    android:src="@drawable/top_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:src="@drawable/women2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="28dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <EditText
                android:id="@+id/loginEmailET"
                android:layout_width="match_parent"

                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/enter_your_email_code"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="#A2A4b5"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/loginPasswordET"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_edit_text"
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColor="#A2A4b5"
                android:textColorHint="@color/colorHint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:visibility="invisible"
                android:text="@string/reset_password"
                android:textAlignment="textEnd"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                android:weightSum="4">

                <RadioButton
                    android:id="@+id/radioButtonStudent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#6672ff"
                    android:text="@string/student"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButtonTeacher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#6672ff"
                    android:text="@string/teacher"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButtonAssistant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#6672ff"
                    android:text="@string/assistant"
                    android:textSize="13sp" />

                <RadioButton
                    android:id="@+id/radioButtonParent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="#6672ff"
                    android:text="@string/parent"
                    android:textSize="13sp" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginbutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_login_btn"
                android:padding="4dp"
                android:text="@string/login2"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginTeacherSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_teacher_btn"
                android:padding="4dp"
                android:text="@string/teacher_sign_up"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>