<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:orientation="vertical">
    <ImageView
        android:layout_marginTop="50dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/change_pass_icon"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/change_password"
    android:layout_gravity="center"
    android:textSize="24sp"
    android:layout_marginTop="8dp"
    android:textStyle="bold"
    />

    <EditText
        android:id="@+id/currentPasswordET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"

        android:textAlignment="viewStart"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/enter_current_password"
        android:textColorHint="@color/colorHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="#A2A4b5"
        android:textSize="16sp" />
    <EditText
        android:id="@+id/newPasswordET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"
        android:hint="@string/enter_new_password"

        android:textAlignment="viewStart"
        android:textColorHint="@color/colorHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="#A2A4b5"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/ConfirmPasswordET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:textColorHint="@color/colorHint"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_edit_text"
        android:ems="10"

        android:textAlignment="viewStart"
        android:hint="@string/reenter_new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="16sp" />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="8dp"
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_teacher_btn"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="18sp"
            android:textStyle="bold" />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="8dp"
            android:id="@+id/changePasswordButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/background_login_btn"
            android:text="@string/change"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>