<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:layout_gravity="center"
    tools:context=".teacher.assistantdata.view.TeacherAddNewAssistantFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_edit_text"
        android:padding="12dp"
        android:text="@string/add_assistant"
        android:textSize="24sp"
        android:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4">

        <EditText
            android:autofillHints=""
            android:id="@+id/assistantNameET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edit_text"
            android:ems="10"
            android:hint="@string/enter_assistant_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:autofillHints=""
            android:id="@+id/assistantEmailET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edit_text"
            android:ems="10"
            android:hint="@string/enter_assistant_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/assistantPhoneNumberET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:autofillHints=""
            android:background="@drawable/background_edit_text"
            android:ems="10"
            android:hint="@string/enter_assistant_phone_number"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:autofillHints=""
            android:id="@+id/assistantPasswordET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_edit_text"
            android:ems="10"
            android:hint="@string/enter_assistant_password"
            android:inputType="text"
            android:minHeight="48dp"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/AddAssistantButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_login_btn"
                android:paddingStart="35dp"
                android:paddingEnd="35dp"
                android:text="@string/add"
                android:textAllCaps="false"

                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/background_login_btn"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>